[MODEXPW-584-3]. Apply more Claiming-specific edi changes (#661)
(cherry picked from commit 3031bb0a50b0fc43b73a9a4e593dad7bfb656742)